python/rregadmin/sam/sam_info_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -m rregadmin.registry.types_wrapper -r ^SamInfo -r ^sam_info_.* -o sam_info_wrapper.py sam_info_wrapper.xml'
from ctypes import *

from rregadmin.registry.types_wrapper import Registry
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.util.ustring_list_wrapper import gboolean
from rregadmin.registry.types_wrapper import gint32
from rregadmin.hive.types_wrapper import guint32
from rregadmin.util.value_wrapper import gint64
from rregadmin.util.glib_wrapper import guint16
from rregadmin.util.value_wrapper import guint8
from rregadmin.util.ustring_list_wrapper import ustring_list
from rregadmin.util.ustring_list_wrapper import ustring
from rregadmin.util.value_wrapper import gchar
from rregadmin.util.path_wrapper import guint
STRING = c_char_p


# ../../../rregadmin/sam/types.h 32
class SamInfo_(Structure):
    pass
SamInfo = SamInfo_
# ../../../rregadmin/sam/sam_info.h 48
sam_info_new = _libraries['librregadmin.so.1'].sam_info_new
sam_info_new.restype = POINTER(SamInfo)
# sam_info_new(in_reg)
sam_info_new.argtypes = [POINTER(Registry)]
sam_info_new.__doc__ = \
"""SamInfo * sam_info_new(Registry * in_reg)
../../../rregadmin/sam/sam_info.h:48"""
# ../../../rregadmin/sam/sam_info.h 54
sam_info_free = _libraries['librregadmin.so.1'].sam_info_free
sam_info_free.restype = gboolean
# sam_info_free(in_info)
sam_info_free.argtypes = [POINTER(SamInfo)]
sam_info_free.__doc__ = \
"""gboolean sam_info_free(SamInfo * in_info)
../../../rregadmin/sam/sam_info.h:54"""
# ../../../rregadmin/sam/sam_info.h 60
sam_info_is_valid = _libraries['librregadmin.so.1'].sam_info_is_valid
sam_info_is_valid.restype = gboolean
# sam_info_is_valid(in_info)
sam_info_is_valid.argtypes = [POINTER(SamInfo)]
sam_info_is_valid.__doc__ = \
"""gboolean sam_info_is_valid(unknown * in_info)
../../../rregadmin/sam/sam_info.h:60"""
# ../../../rregadmin/sam/sam_info.h 67
sam_info_get_next_rid = _libraries['librregadmin.so.1'].sam_info_get_next_rid
sam_info_get_next_rid.restype = gint32
# sam_info_get_next_rid(in_info)
sam_info_get_next_rid.argtypes = [POINTER(SamInfo)]
sam_info_get_next_rid.__doc__ = \
"""gint32 sam_info_get_next_rid(unknown * in_info)
../../../rregadmin/sam/sam_info.h:67"""
# ../../../rregadmin/sam/sam_info.h 73
sam_info_get_auto_increment = _libraries['librregadmin.so.1'].sam_info_get_auto_increment
sam_info_get_auto_increment.restype = guint32
# sam_info_get_auto_increment(in_info)
sam_info_get_auto_increment.argtypes = [POINTER(SamInfo)]
sam_info_get_auto_increment.__doc__ = \
"""guint32 sam_info_get_auto_increment(unknown * in_info)
../../../rregadmin/sam/sam_info.h:73"""
NTTIME = gint64
# ../../../rregadmin/sam/sam_info.h 79
sam_info_get_max_password_age = _libraries['librregadmin.so.1'].sam_info_get_max_password_age
sam_info_get_max_password_age.restype = NTTIME
# sam_info_get_max_password_age(in_info)
sam_info_get_max_password_age.argtypes = [POINTER(SamInfo)]
sam_info_get_max_password_age.__doc__ = \
"""NTTIME sam_info_get_max_password_age(unknown * in_info)
../../../rregadmin/sam/sam_info.h:79"""
# ../../../rregadmin/sam/sam_info.h 85
sam_info_get_min_password_age = _libraries['librregadmin.so.1'].sam_info_get_min_password_age
sam_info_get_min_password_age.restype = NTTIME
# sam_info_get_min_password_age(in_info)
sam_info_get_min_password_age.argtypes = [POINTER(SamInfo)]
sam_info_get_min_password_age.__doc__ = \
"""NTTIME sam_info_get_min_password_age(unknown * in_info)
../../../rregadmin/sam/sam_info.h:85"""
# ../../../rregadmin/sam/sam_info.h 91
sam_info_get_lockout_duration = _libraries['librregadmin.so.1'].sam_info_get_lockout_duration
sam_info_get_lockout_duration.restype = NTTIME
# sam_info_get_lockout_duration(in_info)
sam_info_get_lockout_duration.argtypes = [POINTER(SamInfo)]
sam_info_get_lockout_duration.__doc__ = \
"""NTTIME sam_info_get_lockout_duration(unknown * in_info)
../../../rregadmin/sam/sam_info.h:91"""
# ../../../rregadmin/sam/sam_info.h 97
sam_info_get_lockout_reset = _libraries['librregadmin.so.1'].sam_info_get_lockout_reset
sam_info_get_lockout_reset.restype = NTTIME
# sam_info_get_lockout_reset(in_info)
sam_info_get_lockout_reset.argtypes = [POINTER(SamInfo)]
sam_info_get_lockout_reset.__doc__ = \
"""NTTIME sam_info_get_lockout_reset(unknown * in_info)
../../../rregadmin/sam/sam_info.h:97"""
# ../../../rregadmin/sam/sam_info.h 103
sam_info_get_flags = _libraries['librregadmin.so.1'].sam_info_get_flags
sam_info_get_flags.restype = guint32
# sam_info_get_flags(in_info)
sam_info_get_flags.argtypes = [POINTER(SamInfo)]
sam_info_get_flags.__doc__ = \
"""guint32 sam_info_get_flags(unknown * in_info)
../../../rregadmin/sam/sam_info.h:103"""
# ../../../rregadmin/sam/sam_info.h 109
sam_info_get_min_pass = _libraries['librregadmin.so.1'].sam_info_get_min_pass
sam_info_get_min_pass.restype = guint16
# sam_info_get_min_pass(in_info)
sam_info_get_min_pass.argtypes = [POINTER(SamInfo)]
sam_info_get_min_pass.__doc__ = \
"""guint16 sam_info_get_min_pass(unknown * in_info)
../../../rregadmin/sam/sam_info.h:109"""
# ../../../rregadmin/sam/sam_info.h 115
sam_info_should_enforce_password_history = _libraries['librregadmin.so.1'].sam_info_should_enforce_password_history
sam_info_should_enforce_password_history.restype = gboolean
# sam_info_should_enforce_password_history(in_info)
sam_info_should_enforce_password_history.argtypes = [POINTER(SamInfo)]
sam_info_should_enforce_password_history.__doc__ = \
"""gboolean sam_info_should_enforce_password_history(unknown * in_info)
../../../rregadmin/sam/sam_info.h:115"""
# ../../../rregadmin/sam/sam_info.h 121
sam_info_get_lockout_threshold = _libraries['librregadmin.so.1'].sam_info_get_lockout_threshold
sam_info_get_lockout_threshold.restype = guint16
# sam_info_get_lockout_threshold(in_info)
sam_info_get_lockout_threshold.argtypes = [POINTER(SamInfo)]
sam_info_get_lockout_threshold.__doc__ = \
"""guint16 sam_info_get_lockout_threshold(unknown * in_info)
../../../rregadmin/sam/sam_info.h:121"""
# ../../../rregadmin/sam/sam_info.h 127
sam_info_get_obfs_syskey = _libraries['librregadmin.so.1'].sam_info_get_obfs_syskey
sam_info_get_obfs_syskey.restype = POINTER(guint8)
# sam_info_get_obfs_syskey(in_info)
sam_info_get_obfs_syskey.argtypes = [POINTER(SamInfo)]
sam_info_get_obfs_syskey.__doc__ = \
"""guint8 * sam_info_get_obfs_syskey(unknown * in_info)
../../../rregadmin/sam/sam_info.h:127"""
# ../../../rregadmin/sam/sam_info.h 134
sam_info_get_number_of_users = _libraries['librregadmin.so.1'].sam_info_get_number_of_users
sam_info_get_number_of_users.restype = c_int
# sam_info_get_number_of_users(in_info)
sam_info_get_number_of_users.argtypes = [POINTER(SamInfo)]
sam_info_get_number_of_users.__doc__ = \
"""int sam_info_get_number_of_users(unknown * in_info)
../../../rregadmin/sam/sam_info.h:134"""
# ../../../rregadmin/sam/sam_info.h 140
sam_info_get_user_name_list = _libraries['librregadmin.so.1'].sam_info_get_user_name_list
sam_info_get_user_name_list.restype = POINTER(ustring_list)
# sam_info_get_user_name_list(in_info)
sam_info_get_user_name_list.argtypes = [POINTER(SamInfo)]
sam_info_get_user_name_list.__doc__ = \
"""unknown * sam_info_get_user_name_list(unknown * in_info)
../../../rregadmin/sam/sam_info.h:140"""
# /usr/include/glib-2.0/glib/garray.h 39
class _GArray(Structure):
    pass
GArray = _GArray
# ../../../rregadmin/sam/sam_info.h 146
sam_info_get_user_rid_list = _libraries['librregadmin.so.1'].sam_info_get_user_rid_list
sam_info_get_user_rid_list.restype = POINTER(GArray)
# sam_info_get_user_rid_list(in_info)
sam_info_get_user_rid_list.argtypes = [POINTER(SamInfo)]
sam_info_get_user_rid_list.__doc__ = \
"""unknown * sam_info_get_user_rid_list(unknown * in_info)
../../../rregadmin/sam/sam_info.h:146"""
# ../../../rregadmin/sam/types.h 30
class SamUser_(Structure):
    pass
SamUser = SamUser_
rid_type = guint32
# ../../../rregadmin/sam/sam_info.h 152
sam_info_get_user_by_id = _libraries['librregadmin.so.1'].sam_info_get_user_by_id
sam_info_get_user_by_id.restype = POINTER(SamUser)
# sam_info_get_user_by_id(in_info, in_id)
sam_info_get_user_by_id.argtypes = [POINTER(SamInfo), rid_type]
sam_info_get_user_by_id.__doc__ = \
"""SamUser * sam_info_get_user_by_id(SamInfo * in_info, rid_type in_id)
../../../rregadmin/sam/sam_info.h:152"""
# ../../../rregadmin/sam/sam_info.h 158
sam_info_get_user_by_name = _libraries['librregadmin.so.1'].sam_info_get_user_by_name
sam_info_get_user_by_name.restype = POINTER(SamUser)
# sam_info_get_user_by_name(in_info, in_name)
sam_info_get_user_by_name.argtypes = [POINTER(SamInfo), POINTER(ustring)]
sam_info_get_user_by_name.__doc__ = \
"""SamUser * sam_info_get_user_by_name(SamInfo * in_info, unknown * in_name)
../../../rregadmin/sam/sam_info.h:158"""
# ../../../rregadmin/sam/sam_info.h 166
sam_info_get_registry = _libraries['librregadmin.so.1'].sam_info_get_registry
sam_info_get_registry.restype = POINTER(Registry)
# sam_info_get_registry(in_info)
sam_info_get_registry.argtypes = [POINTER(SamInfo)]
sam_info_get_registry.__doc__ = \
"""Registry * sam_info_get_registry(SamInfo * in_info)
../../../rregadmin/sam/sam_info.h:166"""
# ../../../rregadmin/sam/sam_info.h 174
sam_info_debug_print = _libraries['librregadmin.so.1'].sam_info_debug_print
sam_info_debug_print.restype = None
# sam_info_debug_print(in_info)
sam_info_debug_print.argtypes = [POINTER(SamInfo)]
sam_info_debug_print.__doc__ = \
"""void sam_info_debug_print(unknown * in_info)
../../../rregadmin/sam/sam_info.h:174"""
SamUser_._fields_ = [
    # ../../../rregadmin/sam/types.h 30
]
SamInfo_._fields_ = [
    # ../../../rregadmin/sam/types.h 32
]
_GArray._fields_ = [
    # /usr/include/glib-2.0/glib/garray.h 39
    ('data', STRING),
    ('len', guint),
]
__all__ = ['sam_info_get_number_of_users',
           'sam_info_should_enforce_password_history', 'sam_info_new',
           'sam_info_get_max_password_age', 'rid_type',
           'sam_info_get_user_name_list', 'sam_info_get_flags',
           'GArray', 'sam_info_free', 'sam_info_get_auto_increment',
           'sam_info_get_user_rid_list', '_GArray',
           'sam_info_get_registry', 'sam_info_debug_print',
           'sam_info_get_lockout_threshold',
           'sam_info_get_user_by_id', 'sam_info_is_valid',
           'sam_info_get_min_password_age', 'SamUser', 'NTTIME',
           'sam_info_get_user_by_name', 'sam_info_get_lockout_reset',
           'SamUser_', 'sam_info_get_min_pass',
           'sam_info_get_next_rid', 'sam_info_get_obfs_syskey',
           'sam_info_get_lockout_duration', 'SamInfo_', 'SamInfo']
